# DLL-To-Shellcode

./: .gitignore  README.md
dll_to_shellcode/: CMakeLists.txt  main.cpp  main.hpp
loader_stub/: dllmain.cpp  dllmain.hpp  function_ptrs.hpp  loader_stub.sln  loader_stub.vcxproj  loader_stub.vcxproj.filters  structs.hpp
